2005-05-17  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.[ch], daemon/misc.c, daemon/verify-pam.c,
	  docs/C/gdm.xml, gui/Makefile.am, gui/gdmdynamic.c,
	  config/gdm.conf.in: Added support for dynamic Xservers.
	  Fixes enhancement request #168219.  Patch provided by
	  Bob Terek <Robert.Terek@sun.com>.

2005-05-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/AccessKeyMouseEvents.in:  Fixed comments.

2005-05-16  Brian Cameron  <brian.cameron@sun.com>

	* Now use gi18n.h instead of libgnome header files to get
	  access to translation code.  libgnome is still used in
	  vicious-extensions, so this still needs to be cleaned up
	  before bug #117889 is fully fixed.  Patch provided by
	  Christian - Manny Calavera - Neumair.
	* configure.in:  Backed out adding zh_HK to
	  ALL_LINGUAS since it breaks the build.
	
2005-05-16  Danilo \305\240egan  <dsegan@gmx.net>

       * gui/gdmsetup-strings.c: Removed.
       * gui/gdmchooser-strings.c: Removed.

       * gui/Makefile.am: Remove gdmchooser-strings.c and
       gdmsetup-strings.c, as well as duplicate entries for glade files
       from EXTRA_DIST.  Fixes bug #55635

2005-05-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c:  Fix broken messages.
	  Fixes bug #304377.  Thanks to Leena Gunda.
	* configure.in: Added zh_HK to ALL_LINGUAS.

2005-05-13  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm-net.c: Fix gdm2 so it works better
	  on BSD and MacOS.  Upon getting EOF on a socket/pipe/etc.
	  G_IO_IN is always set and G_IO_HUP may not be set.
	  Therefore, the 0 return from read() is important.  If
	  we get a length <= 0 from read() we force the socket
	  to be closed.  This prevents gdm-binary from causing
	  high CPU-load after logout.  Fixes bug #172491.
	  Fix posted by Joe Marcus Clarke.

2005-05-13  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c: No longer set default
	  font size.  Thanks to Erwann Chenede for catching
	  this.
