@@ -104,6 +104,11 @@ To assign a default face to a user for the face browser, place a
 The gdm.conf DefaultFace configuration option allows the system
 administrator to set up a default face image.
 
+For best a11y support on Linux, it is recommended use the
+--with-xevie configuration option so that the user's Xserver
+session is always started with the Xserver XEVIE extension.
+GOK works best when XEVIE is enabled.
+
 Read the GDM documentation for more information about configuring
 GDM: http://yippi.hypermall.com/gdm/
 
