@@ -48,9 +48,11 @@
 #undef EXPANDED_SBINDIR
 #undef EXPANDED_SYSCONFDIR
 #undef EXPANDED_SESSDIR
-#undef X_PATH
 #undef X_SERVER
 #undef X_SERVER_PATH
 #undef X_XNEST_PATH
 #undef X_XNEST_CONFIG_OPTIONS
 #undef X_CONFIG_OPTIONS
+#undef X_PATH
+#undef XSESSION_SHELL
+#undef XEVIE_OPTION
