@@ -1,4 +1,4 @@
-#!/bin/sh
+#!@XSESSION_SHELL@
 #
 # This is SORT OF LIKE an X session, but not quite.  You get a command as the
 # first argument (it could be multiple words, so run it with "eval").  As a
