@@ -469,7 +469,7 @@ Enable=false
 # Definition of the standard X server.
 [server-Standard]
 name=Standard server
-command=@X_SERVER@ @X_CONFIG_OPTIONS@
+command=@X_SERVER@ @X_CONFIG_OPTIONS@ @XEVIE_OPTION@
 flexible=true
 
 # To use this server type you should add -query host or -indirect host
